fix footer white space

--- a/themes/default/base.css
+++ b/themes/default/base.css
@@ -23,7 +23,7 @@ select.form-control  {-webkit-appearance: textfield;}
 .navbar-fixed-top .btn {border-radius: 0; padding-top: 14px; padding-bottom: 14px; display:block; text-align:center; min-width:50px;}
 
 /* NAVBAR BOTTOM */
-.navbar-fixed-bottom {transition: bottom .4s; -webkit-transition: bottom .4s;}
+.navbar-fixed-bottom {transition: bottom .4s; -webkit-transition: bottom .4s; margin-left:-1px; margin-right:-1px;}
 .navbar-fixed-bottom .nav-pills>li>a {border-radius:0; margin-bottom:0; min-height: 49px; line-height: 49px; padding: 0;}
 .navbar-fixed-bottom .nav-justified {display: table;}
 .navbar-fixed-bottom .nav-justified>li {display: table-cell; width:25%; }
